refactor joint/disjoint

--- a/config/data/module/mtl_joint_librispeech_960h.yaml
+++ b/config/data/module/mtl_joint_librispeech_960h.yaml
@@ -1,4 +1,4 @@
-_target_: src.data.module.MTLDataModuleConfig
+_target_: src.data.module.JointMTLDataModuleConfig
 
 # name of dataset
 name: ls960h
