--- a/config/data/pipe/speaker_datapipe_whole.yaml
+++ b/config/data/pipe/speaker_datapipe_whole.yaml
@@ -1,73 +1,74 @@
-train_dp:
-  _target_: data_utility.pipe.builder.SpeakerRecognitionDataPipeBuilderConfig
+speaker:
+  train_dp:
+    _target_: data_utility.pipe.builder.SpeakerRecognitionDataPipeBuilderConfig
 
-  # potential compression of shards
-  tar_read_mode: 'r'  # depends on compression or not
+    # potential compression of shards
+    tar_read_mode: 'r'  # depends on compression or not
 
-  # parameters determining randomness
-  shuffle_buffer_before: 500
-  shuffle_buffer_after: 10
-  bucket_buffer: 15
+    # parameters determining randomness
+    shuffle_buffer_before: 500
+    shuffle_buffer_after: 10
+    bucket_buffer: 15
 
-  # chunk
-  chunk_strategy: none
-  chunk_size_sec: null
+    # chunk
+    chunk_strategy: none
+    chunk_size_sec: null
 
-  # batching
-  max_tokens: 3_200_000
-  max_len: 320_000
+    # batching
+    max_tokens: 3_200_000
+    max_len: 320_000
 
-  # logic for giving each worker equal number of data
-  allow_partial_shards: true
-  num_workers: 5
-  drop_last: true
-
-
-val_dp:
-  _target_: data_utility.pipe.builder.SpeakerRecognitionDataPipeBuilderConfig
-
-  # potential compression of shards
-  tar_read_mode: 'r'  # depends on compression or not
-
-  # parameters determining randomness
-  shuffle_buffer_before: 500
-  shuffle_buffer_after: 10
-  bucket_buffer: 15
-
-  # chunk
-  chunk_strategy: none
-  chunk_size_sec: null
-
-  # batching
-  max_tokens: 3_200_000
-  max_len: 320_000
-
-  # logic for giving each worker equal number of data
-  allow_partial_shards: true
-  num_workers: 1
-  drop_last: false
+    # logic for giving each worker equal number of data
+    allow_partial_shards: true
+    num_workers: 5
+    drop_last: true
 
 
-test_dp:
-  _target_: data_utility.pipe.builder.SpeakerRecognitionDataPipeBuilderConfig
+  val_dp:
+    _target_: data_utility.pipe.builder.SpeakerRecognitionDataPipeBuilderConfig
 
-  # potential compression of shards
-  tar_read_mode: 'r'  # depends on compression or not
+    # potential compression of shards
+    tar_read_mode: 'r'  # depends on compression or not
 
-  # parameters determining randomness
-  shuffle_buffer_before: 500
-  shuffle_buffer_after: 10
-  bucket_buffer: 15
+    # parameters determining randomness
+    shuffle_buffer_before: 500
+    shuffle_buffer_after: 10
+    bucket_buffer: 15
 
-  # chunk
-  chunk_strategy: none
-  chunk_size_sec: null
+    # chunk
+    chunk_strategy: none
+    chunk_size_sec: null
 
-  # batching
-  batch_size: 1
+    # batching
+    max_tokens: 3_200_000
+    max_len: 320_000
 
-  # logic for giving each worker equal number of data
-  allow_partial_shards: true
-  num_workers: 1
-  drop_last: false
+    # logic for giving each worker equal number of data
+    allow_partial_shards: true
+    num_workers: 1
+    drop_last: false
+
+
+  test_dp:
+    _target_: data_utility.pipe.builder.SpeakerRecognitionDataPipeBuilderConfig
+
+    # potential compression of shards
+    tar_read_mode: 'r'  # depends on compression or not
+
+    # parameters determining randomness
+    shuffle_buffer_before: 500
+    shuffle_buffer_after: 10
+    bucket_buffer: 15
+
+    # chunk
+    chunk_strategy: none
+    chunk_size_sec: null
+
+    # batching
+    batch_size: 1
+
+    # logic for giving each worker equal number of data
+    allow_partial_shards: true
+    num_workers: 1
+    drop_last: false
 
