--- a/config/network/mtl_joint_wav2vec2_linear.yaml
+++ b/config/network/mtl_joint_wav2vec2_linear.yaml
@@ -1,4 +1,4 @@
-_target_: src.network.wav2vec2.w2v2_speech.Wav2vec2ForSpeechRecognitionConfig
+_target_: src.network.wav2vec2.Wav2vec2ForJointMTLConfig
 
 # settings for wav2vec2 architecture
 huggingface_id: "facebook/wav2vec2-base"
@@ -8,16 +8,27 @@ reset_weights: false
 freeze_cnn: true
 freeze_transformer: true  # this also freezes projector and rel. pos. emb
 num_steps_freeze_cnn: -1 # so always
-num_steps_freeze_transformer: 2_000
+num_steps_freeze_transformer: 10_000
 
 # if enabled, gradient checkpointing slows down iteration speed but saves memory
 use_gradient_checkpointing: true
 
 # head on top of wav2vec2 for speaker recognition
-head_cfg:
+speaker_head_cfg:
+  _target_: src.network.heads.LinearProjectionHeadConfig
+  use_projection_layer: false
+  projection_layer_dim: 128
+  drop_prob: 0.05
+  use_cosine_linear: false
+
+  enable_train_chunk: false
+  train_random_chunk_size: 40 # ~25 ms per frame. 40==1 second chunk size
+
+speech_head_cfg:
   _target_: src.network.heads.LinearHeadConfig
   blank_token_idx: ${optim.loss.ctc_blank_idx}
 
   blank_initial_bias: 10
   character_distribution_json: ${oc.env:LIBRISPEECH_DIR}/meta/character_distribution_train.json
   character_vocabulary_json: ${oc.env:LIBRISPEECH_DIR}/meta/character_vocabulary.json
+
