--- a/config/network/speaker_wav2vec2_xvector.yaml
+++ b/config/network/speaker_wav2vec2_xvector.yaml
@@ -1,4 +1,4 @@
-_target_: src.networks.wav2vec2.w2v2_speaker.Wav2vec2ForSpeakerRecognitionConfig
+_target_: src.network.wav2vec2.w2v2_speaker.Wav2vec2ForSpeakerRecognitionConfig
 
 # settings for wav2vec2 architecture
 huggingface_id: "facebook/wav2vec2-base"
@@ -15,5 +15,5 @@ use_gradient_checkpointing: true
 
 # head on top of wav2vec2 for speaker recognition
 head_cfg:
-  _target_: src.networks.heads.XvectorHeadConfig
+  _target_: src.network.heads.XvectorHeadConfig
   use_cosine_linear: false
