--- a/config/network/speech_wavlm_linear.yaml
+++ b/config/network/speech_wavlm_linear.yaml
@@ -1,5 +1,4 @@
-#_target_: src.networks.wavlm.wavlm_speech.WavLMForSpeechRecognitionConfig
-_target_: src.networks.wavlm.wavlm_speech.WavLMForSpeechRecognitionConfig
+_target_: src.network.wavlm.WavLMForSpeechRecognitionConfig
 
 
 # settings for wav2vec2 architecture
@@ -17,7 +16,7 @@ use_gradient_checkpointing: true
 
 # head on top of wav2vec2 for speaker recognition
 head_cfg:
-  _target_: src.networks.heads.LinearHeadConfig
+  _target_: src.network.heads.LinearHeadConfig
   blank_token_idx: ${optim.loss.ctc_blank_idx}
 
   blank_initial_bias: 10
