--- a/config/train_mtl_disjoint.yaml
+++ b/config/train_mtl_disjoint.yaml
@@ -1,9 +1,9 @@
 defaults:
   - _self_
   - callbacks: mt_default
-  - data/module: mtl_joint_librispeech_960h
-  - data/pipe: mtl_datapipe
-  - network: mtl_joint_wav2vec2_linear
+  - data/module: mtl_disjoint_ls960h_vox2
+  - data/pipe: mtl_disjoint_datapipe
+  - network: mtl_disjoint_wav2vec2_linear
   - optim/algo: adam
   - optim/schedule: tri_stage
   - optim/loss: mt_speech_speaker_loss
@@ -34,7 +34,7 @@ use_wandb: ${oc.decode:${oc.env:USE_WANDB}}
 gpus: ${oc.decode:${oc.env:NUM_GPUS}}
 
 # project name (useful for giving a name to log directories)
-project_name: disjoint-mtl-joined
+project_name: disjoint-mtl
 
 # experiment name
 # (:) indicates it needs to be resolved
