--- a/config/experiments/speaker_aam_4cycle_nofreeze_ch3s_bs64.yaml
+++ b/config/experiments/speaker_aam_4cycle_nofreeze_ch3s_bs64.yaml
@@ -17,10 +17,11 @@ trainer:
 
 data:
   pipe:
-    train_dp:
-      chunk_strategy: random
-      chunk_size_sec: 3
-      batch_size: 64
+    speaker:
+      train_dp:
+        chunk_strategy: random
+        chunk_size_sec: 3
+        batch_size: 64
 
 network:
   freeze_transformer: False
