--- a/config/optim/loss/mtl_static_equal.yaml
+++ b/config/optim/loss/mtl_static_equal.yaml
@@ -1,7 +1,7 @@
 _target_: src.optim.loss.mt_speech_speaker_loss.MTSpeechAndSpeakerLoss
 
 # if True, use CE loss for speaker recognition, otherwise AAM loss
-use_cross_entropy: true  # ignore aam_scale and aam_margin values if true
+use_cross_entropy: false  # ignore aam_scale and aam_margin values if true
 
 # settings for AAM loss (if used)
 aam_margin: 0.2
@@ -22,9 +22,9 @@ dwa_use_average_loss: true
 dwa_average_loss_window: 5
 
 # number of losses
-num_loss: 3
+num_loss: 2
 
 # weighting between the loss functions (if scale_method=static)
-static_speech_weight: 0.4
-static_speaker_weight: 0.4
-static_dsi_weight: 0.2
+static_speech_weight: 0.5
+static_speaker_weight: 0.5
+static_dsi_weight: 0.0 # used when num_losses=3
