--- a/config/optim/loss/mtl_static_skewed.yaml
+++ b/config/optim/loss/mtl_static_skewed.yaml
@@ -1,7 +1,7 @@
 _target_: src.optim.loss.mt_speech_speaker_loss.MTSpeechAndSpeakerLoss
 
 # if True, use CE loss for speaker recognition, otherwise AAM loss
-use_cross_entropy: true  # ignore aam_scale and aam_margin values if true
+use_cross_entropy: false  # ignore aam_scale and aam_margin values if true
 
 # settings for AAM loss (if used)
 aam_margin: 0.2
@@ -25,6 +25,6 @@ dwa_average_loss_window: 5
 num_loss: 2
 
 # weighting between the loss functions (if scale_method=static)
-static_speech_weight: 0.5
-static_speaker_weight: 0.5
+static_speech_weight: 0.9
+static_speaker_weight: 0.1
 static_dsi_weight: 0.0 # used when num_losses=3
