--- a/config/data/module/mtl_joint_ls960h_vox2.yaml
+++ b/config/data/module/mtl_joint_ls960h_vox2.yaml
@@ -1,23 +1,29 @@
-_target_: src.data.module.SpeakerRecognitionDataModuleConfig
+_target_: src.data.module.JointMTLDataModuleConfig
 
 # name of dataset
-name: ls_clean
+name: ls960h
 
 # path to folder(s) containing train data
 train_shard_paths:
   - ${oc.env:LIBRISPEECH_DIR}/shards/train-clean-100
   - ${oc.env:LIBRISPEECH_DIR}/shards/train-clean-360
+  - ${oc.env:LIBRISPEECH_DIR}/shards/train-other-500
+  - ${oc.env:VOXCELEB_DIR}/shards/vox2_train
 
 # path to folder(s) containing val data
 val_shard_paths:
   - ${oc.env:LIBRISPEECH_DIR}/shards/val-clean-100
   - ${oc.env:LIBRISPEECH_DIR}/shards/val-clean-360
+  - ${oc.env:LIBRISPEECH_DIR}/shards/val-other-500
 
 # shard pattern
 shard_file_pattern: "*.*.tar*"
 
+# path to meta file for mapping vocabulary to predicton IDs
+char_vocab_json: ${oc.env:LIBRISPEECH_DIR}/meta/character_vocabulary.json
+
 # path to meta file for speaker info (ID for train and val)
-speaker_json: ${oc.env:LIBRISPEECH_DIR}/meta/speakers_train_clean.json
+speaker_json: ${oc.env:LIBRISPEECH_DIR}/meta/speakers_train.json
 
 # name of each test set
 test_names:
