add mail to snellius

--- a/config/hydra/launcher/slurm_snellius.yaml
+++ b/config/hydra/launcher/slurm_snellius.yaml
@@ -17,3 +17,4 @@ exclude: null
 signal_delay_s: 120
 max_num_timeout: 0
 array_parallelism: 16
+additional_parameters: { "mail-user": "nvaessen", "mail-type": "BEGIN,END,FAIL" }
