--- a/config/callbacks/mt_early_stopping.yaml
+++ b/config/callbacks/mt_early_stopping.yaml
@@ -10,8 +10,8 @@ to_add:
 
 # progress bar
 pbar:
-  _target_: pytorch_lightning.callbacks.TQDMProgressBar
-  refresh_rate: 100
+  _target_: pytorch_lightning.callbacks.RichProgressBar
+  leave: true
 
 # model summary
 summary:
