--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ scikit-learn = "^1.1.2"
 hydra-submitit-launcher = "^1.2.0"
 speechbrain = "^0.5.13"
 pyarrow = "6.0.1"
+rich = "^13.3.1"
 
 [tool.poetry.dev-dependencies]
 
