--- a/config/train_speaker.yaml
+++ b/config/train_speaker.yaml
@@ -49,6 +49,4 @@ hydra:
     dir: ${log_folder}/disjoint-mtl/sweep/${now:%Y-%m-%d_%H-%M-%S}
     subdir: ${experiment_name}
   job:
-    chdir: true
-    env_copy:
-      - LOG_FOLDER
+    chdir: false
