should work now on snellius ;o

--- a/config/train_speech.yaml
+++ b/config/train_speech.yaml
@@ -43,10 +43,10 @@ tag: null
 hydra:
   run:
     # set root output directory
-    dir: logs/disjoint-mtl/run/${now:%Y-%m-%d_%H-%M-%S}/${experiment_name}
+    dir: ${log_folder}/disjoint-mtl/run/${now:%Y-%m-%d_%H-%M-%S}/${experiment_name}
   sweep:
     # set root output directory
-    dir: logs/disjoint-mtl/sweep/${now:%Y-%m-%d_%H-%M-%S}
+    dir: ${log_folder}/disjoint-mtl/sweep/${now:%Y-%m-%d_%H-%M-%S}
     subdir: ${experiment_name}
   job:
     chdir: false
