--- a/config/train_speech.yaml
+++ b/config/train_speech.yaml
@@ -9,6 +9,9 @@ defaults:
   - optim/loss: ctc
   - trainer: trainer_gpu
 
+# directory for slurm and hydra logs
+log_folder: ${oc.env:LOG_FOLDER}
+
 # random seed used by the experiment
 seed: 42133724
 
