--- a/config/data/pipe/mtl_disjoint_datapipe.yaml
+++ b/config/data/pipe/mtl_disjoint_datapipe.yaml
@@ -88,6 +88,10 @@ speech:
     allow_partial_shards: true
     num_workers: 3
 
+    # filter on language_tags
+    language_tags:
+      - en
+
   val_dp:
     _target_: data_utility.pipe.builder.SpeechRecognitionDataPipeBuilderConfig
 
@@ -107,6 +111,10 @@ speech:
     allow_partial_shards: true
     num_workers: 1
 
+    # filter on language_tags
+    language_tags:
+      - en
+
   test_dp:
     _target_: data_utility.pipe.builder.SpeechRecognitionDataPipeBuilderConfig
 
@@ -125,3 +133,7 @@ speech:
     # logic for giving each worker equal number of data
     allow_partial_shards: true
     num_workers: 1
+
+    # filter on language_tags
+    language_tags:
+      - en
