--- a/config/callbacks/speech_early_stopping.yaml
+++ b/config/callbacks/speech_early_stopping.yaml
@@ -3,6 +3,7 @@ to_add:
   - summary
   - lr_monitor
   - ram_monitor
+  - magnitude_monitor
   - checkpoint
   - early_stopping_plateau
   - early_stopping_diverge
@@ -21,8 +22,14 @@ summary:
 lr_monitor:
   _target_: pytorch_lightning.callbacks.LearningRateMonitor
 
+# keep track of RAM usage
 ram_monitor:
   _target_: src.callbacks.memory_monitor.RamMemoryMonitor
+  frequency: 100
+
+# keep track of magnitudes of weights and gradients
+magnitude_monitor:
+  _target_: src.callbacks.magnitude_monitor.MagnitudeMonitor
   frequency: 100
 
 # save model checkpoint of weights with best validation performance
