--- a/config/trainer/trainer_gpu_clip.yaml
+++ b/config/trainer/trainer_gpu_clip.yaml
@@ -64,3 +64,4 @@ auto_lr_find: False
 # apply clipping to the global gradient norm to avoid exploding
 # gradients. Default value of '0' means no clipping is applied
 gradient_clip_val: 1
+gradient_clip_algorithm: value
