FIX STUPID NAN LOSS

--- a/config/network/mtl_disjoint_wav2vec2_ecapa.yaml
+++ b/config/network/mtl_disjoint_wav2vec2_ecapa.yaml
@@ -25,7 +25,7 @@ dsi_head_alpha: 1
 # head on top of wav2vec2 for speaker recognition
 speaker_head_cfg:
   _target_: src.network.heads.EcapaTdnnHeadConfig
-  use_cosine_linear: false
+  use_cosine_linear: true
 
 speech_head_cfg:
   _target_: src.network.heads.LinearHeadConfig
