--- a/config/hydra/launcher/das_preempt.yaml
+++ b/config/hydra/launcher/das_preempt.yaml
@@ -1,24 +1,26 @@
 # @package hydra.launcher
 
 _target_: hydra_plugins.hydra_submitit_launcher.submitit_launcher.SlurmLauncher
-
 submitit_folder: ${hydra.sweep.dir}/.submitit/%j
+
+qos: das-preempt
+account: das
+partition: das,das-prio
+exclude: null
+
 timeout_min: 2880
+array_parallelism: 8
+
+gres: gpu:${trainer.devices}
 cpus_per_task: 16
-gres: gpu:rtx_a6000:${trainer.devices}
-tasks_per_node: 1
 mem_gb: 20
+
+tasks_per_node: 1
 nodes: 1
 name: ${hydra.job.name}
-partition: das
-account: das
-qos: das-large
-comment: null
-constraint: null
-exclude: null
 signal_delay_s: 120
 max_num_timeout: 0
+
 additional_parameters: { "mail-user": "nvaessen", "mail-type": "BEGIN,END,FAIL" }
-array_parallelism: 8
 setup:
   - ./slurm_setup.sh
