--- a/config/hydra/launcher/das_preempt.yaml
+++ b/config/hydra/launcher/das_preempt.yaml
@@ -5,7 +5,7 @@ submitit_folder: ${hydra.sweep.dir}/.submitit/%j
 
 qos: das-preempt
 account: das
-partition: das,das-prio
+partition: das
 exclude: null
 
 timeout_min: 2880
