add nist SRE 2008 eval

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ VOXCELEB_DIR=$PWD/data/voxceleb
 # directory containing the switchboard dataset
 SWITCHBOARD_DIR=$PWD/data/switchboard
 
+# directory containing the SRE 2008 dataset
+SRE_2008_DIR=$PWD/data/sre2008
+
 # folder where results will be logged to
 LOG_FOLDER=$PWD/data/logs/disjoint_mtl
 
