--- a/config/train_speaker.yaml
+++ b/config/train_speaker.yaml
@@ -1,7 +1,7 @@
 defaults:
   - _self_
   - callbacks: speaker_early_stopping
-  - data/module: speaker_voxceleb
+  - data/module: speaker_vox2
   - data/pipe: speaker_datapipe
   - network: speaker_wav2vec2_linear
   - optim/algo: adam
