--- a/config/callbacks/speech_early_stopping.yaml
+++ b/config/callbacks/speech_early_stopping.yaml
@@ -45,7 +45,7 @@ checkpoint:
   auto_insert_metric_name: false
   save_weights_only: true
 
-last_checkpoint_pattern: 'epoch_{epoch:04d}.step_{step:09d}.val-loss_{val_loss:.10f}.best'
+last_checkpoint_pattern: 'epoch_{epoch:04d}.step_{step:09d}.val-loss_{val_loss:.10f}.last'
 
 # stop when val_wer doesn't improve
 early_stopping_plateau:
