--- a/.env.example
+++ b/.env.example
@@ -4,11 +4,11 @@ LIBRISPEECH_DIR=$PWD/data/librispeech
 # directory containing the VoxCeleb dataset
 VOXCELEB_DIR=$PWD/data/voxceleb
 
-# directory containing the switchboard dataset
-SWITCHBOARD_DIR=$PWD/data/switchboard
-
 # directory containing the SRE 2008 dataset
 SRE_2008_DIR=$PWD/data/sre2008
+
+# directory containing the HUB5 dataset
+HUB5_DIR=$PWD/data/hub5
 
 # folder where results will be logged to
 LOG_FOLDER=$PWD/data/logs/disjoint_mtl
