--- a/config/data/module/speaker_eval.yaml
+++ b/config/data/module/speaker_eval.yaml
@@ -19,12 +19,21 @@ speaker_json: ${oc.env:VOXCELEB_DIR}/meta/speakers_train.json
 
 # name of each test set
 test_names:
+  - vox1-o
+  - vox1-h
+  - ls-test-other
   - sre2008
 
 # path to each shard of test set (only 1 dir each)
 test_shards:
+  - ${oc.env:VOX2_DIR}/shards/vox1_test_o
+  - ${oc.env:VOX2_DIR}/shards/vox1_test_h
+  - ${oc.env:LIBRISPEECH_DIR}/shards/test-other
   - ${oc.env:SRE_2008_DIR}/shards
 
 # path to each trial list matching the test set
 test_trials:
+  - ${oc.env:VOX2_DIR}/meta/veri_test2.txt
+  - ${oc.env:VOX2_DIR}/meta/list_test_hard2.txt
+  - ${oc.env:LIBRISPEECH_DIR}/meta/trials_test_other.txt
   - ${oc.env:SRE_2008_DIR}/meta/trials.txt
