--- a/config/data/module/mtl_disjoint_eval.yaml
+++ b/config/data/module/mtl_disjoint_eval.yaml
@@ -4,7 +4,7 @@ speech_dm_cfg:
   _target_: src.data.module.SpeechRecognitionDataModuleConfig
 
   # name of dataset
-  name: ls960h
+  name: eval
 
   # path to folder(s) containing train data
   train_shard_paths:
@@ -40,25 +40,21 @@ speaker_dm_cfg:
   _target_: src.data.module.SpeakerRecognitionDataModuleConfig
 
   # name of dataset
-  name: ls960
+  name: eval
 
   # path to folder(s) containing train data
   train_shard_paths:
-    - ${oc.env:LIBRISPEECH_DIR}/shards/train-clean-100
-    - ${oc.env:LIBRISPEECH_DIR}/shards/train-clean-360
-    - ${oc.env:LIBRISPEECH_DIR}/shards/train-other-500
+    - ${oc.env:VOXCELEB_DIR}/shards/vox2_train
 
   # path to folder(s) containing val data
   val_shard_paths:
-    - ${oc.env:LIBRISPEECH_DIR}/shards/val-clean-100
-    - ${oc.env:LIBRISPEECH_DIR}/shards/val-clean-360
-    - ${oc.env:LIBRISPEECH_DIR}/shards/val-other-500
+    - ${oc.env:VOXCELEB_DIR}/shards/vox2_val
 
   # shard pattern
   shard_file_pattern: "*.*.tar*"
 
   # path to meta file for speaker info (ID for train and val)
-  speaker_json: ${oc.env:LIBRISPEECH_DIR}/meta/speakers_train.json
+  speaker_json: ${oc.env:VOXCELEB_DIR}/meta/speakers_train.json
 
   # name of each test set
   test_names:
