--- a/config/data/module/mtl_disjoint_eval.yaml
+++ b/config/data/module/mtl_disjoint_eval.yaml
@@ -29,12 +29,14 @@ speech_dm_cfg:
     - ls_test_clean
     - ls_test_other
     - hub5
+    - vox1_o
 
   # path to each shard of test set (only 1 dir each)
   test_shards:
     - ${oc.env:LIBRISPEECH_DIR}/shards/test-clean
     - ${oc.env:LIBRISPEECH_DIR}/shards/test-other
     - ${oc.env:HUB5_DIR}/shards
+    - ${oc.env.VOXCELEB_DIR}/shards/vox1_test_o
 
 speaker_dm_cfg:
   _target_: src.data.module.SpeakerRecognitionDataModuleConfig
