--- a/config/data/module/speech_eval.yaml
+++ b/config/data/module/speech_eval.yaml
@@ -26,9 +26,11 @@ test_names:
   - ls_test_clean
   - ls_test_other
   - hub5
+  - vox1_o
 
 # path to each shard of test set (only 1 dir each)
 test_shards:
   - ${oc.env:LIBRISPEECH_DIR}/shards/test-clean
   - ${oc.env:LIBRISPEECH_DIR}/shards/test-other
   - ${oc.env:HUB5_DIR}/shards
+  - ${oc.env.VOXCELEB_DIR}/shards/vox1_test_o
