--- a/config/data/module/speech_eval.yaml
+++ b/config/data/module/speech_eval.yaml
@@ -33,4 +33,4 @@ test_shards:
   - ${oc.env:LIBRISPEECH_DIR}/shards/test-clean
   - ${oc.env:LIBRISPEECH_DIR}/shards/test-other
   - ${oc.env:HUB5_DIR}/shards
-  - ${oc.env.VOXCELEB_DIR}/shards/vox1_test_o
+  - ${oc.env:VOXCELEB_DIR}/shards/vox1_test_o
