--- a/config/data/module/mtl_disjoint_ls960h_vox2.yaml
+++ b/config/data/module/mtl_disjoint_ls960h_vox2.yaml
@@ -59,16 +59,28 @@ speaker_dm_cfg:
     - vox2_dev
     - ls_dev_clean
     - ls_dev_other
+    - vox1-o
+    - vox1-h
+    - ls-test-other
+    - sre2008
 
   # path to each shard of test set (only 1 dir each)
   test_shards:
     - ${oc.env:VOXCELEB_DIR}/shards/vox2_dev
     - ${oc.env:LIBRISPEECH_DIR}/shards/dev-clean
     - ${oc.env:LIBRISPEECH_DIR}/shards/dev-other
+    - ${oc.env:VOXCELEB_DIR}/shards/vox1_test_o
+    - ${oc.env:VOXCELEB_DIR}/shards/vox1_test_h
+    - ${oc.env:LIBRISPEECH_DIR}/shards/test-other
+    - ${oc.env:SRE_2008_DIR}/shards
 
   # path to each trial list matching the test set
   test_trials:
     - ${oc.env:VOXCELEB_DIR}/meta/trials_dev.txt
     - ${oc.env:LIBRISPEECH_DIR}/meta/trials_dev_clean.txt
     - ${oc.env:LIBRISPEECH_DIR}/meta/trials_dev_other.txt
+    - ${oc.env:VOXCELEB_DIR}/meta/veri_test2.txt
+    - ${oc.env:VOXCELEB_DIR}/meta/list_test_hard2.txt
+    - ${oc.env:LIBRISPEECH_DIR}/meta/trials_test_other.txt
+    - ${oc.env:SRE_2008_DIR}/meta/trials.txt
 
