--- a/config/data/module/mtl_disjoint_ls960h_vox2.yaml
+++ b/config/data/module/mtl_disjoint_ls960h_vox2.yaml
@@ -28,11 +28,20 @@ speech_dm_cfg:
   test_names:
     - ls_dev_clean
     - ls_dev_other
+    - ls_test_clean
+    - ls_test_other
+    - hub5
+    - vox1_o
 
   # path to each shard of test set (only 1 dir each)
   test_shards:
     - ${oc.env:LIBRISPEECH_DIR}/shards/dev-clean
     - ${oc.env:LIBRISPEECH_DIR}/shards/dev-other
+    - ${oc.env:LIBRISPEECH_DIR}/shards/test-clean
+    - ${oc.env:LIBRISPEECH_DIR}/shards/test-other
+    - ${oc.env:HUB5_DIR}/shards
+    - ${oc.env:VOXCELEB_DIR}/shards/vox1_test_o
+
 
 speaker_dm_cfg:
   _target_: src.data.module.SpeakerRecognitionDataModuleConfig
