--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ black = { extras = ["d"], version = "^22.8.0" }
 psutil = "^5.9.2"
 "hurry.filesize" = "^0.9"
 torch = "^1.13.1"
-data_utility = { path = "../data_utility", develop = true }
+data_utility = { path = "data_utility", develop = true }
 pytorch-lightning = "^1.9.0"
 wandb = "^0.13.3"
 transformers = "^4.22.1"
@@ -23,8 +23,6 @@ hydra-submitit-launcher = "^1.2.0"
 speechbrain = "^0.5.13"
 pyarrow = "6.0.1"
 rich = "^13.3.1"
-
-[tool.poetry.dev-dependencies]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
